--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <nav>
-        <a href="#">Inicio</a>
+        <a href="#">
+            <img src="assets/img/elingesilvio.png" alt="">
+            El Inge Silvio
+        </a>
+        <a href="">Blog</a>
+        <a href="">Estados</a>
+        <a href="">Proyectos</a>
+        <a href="">Acerca de</a>
     </nav>
 </body>
 </html>
