--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar responsive</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/abf7c640ed.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
         <a href="#">
-            <img src="assets/img/elingesilvio.png" alt="">
             El Inge Silvio
+            <img src="assets/img/icon-elingesilvio.webp" alt="Icono de El Inge Silvio">
         </a>
         <a href="">Blog</a>
         <a href="">Estados</a>
         <a href="">Proyectos</a>
         <a href="">Acerca de</a>
+        <button type="button" class="button-navbar">
+            <i class="fa-solid fa-bars"></i>
+        </button>
     </nav>
 </body>
 </html>
