--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             El Inge Silvio
             <img src="assets/img/icon-elingesilvio.webp" alt="Icono de El Inge Silvio">
         </a>
+        <a href="">Inicio</a>
         <a href="">Blog</a>
-        <a href="">Estados</a>
+        <a href="">Videos</a>
         <a href="">Proyectos</a>
         <a href="">Acerca de</a>
         <button type="button" class="button-navbar">
