--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             El Inge Silvio
             <img src="assets/img/icon-elingesilvio.webp" alt="Icono de El Inge Silvio">
         </a>
-        <a href="">Inicio</a>
-        <a href="">Blog</a>
-        <a href="">Videos</a>
-        <a href="">Proyectos</a>
-        <a href="">Acerca de</a>
+        <a href="" class="active">Inicio</a>
+        <a href="" class="">Blog</a>
+        <a href="" class="">Videos</a>
+        <a href="" class="">Proyectos</a>
+        <a href="" class="">Acerca de</a>
         <button type="button" class="button-navbar">
             <i class="fa-solid fa-bars"></i>
         </button>
