--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             El Inge Silvio
             <img src="assets/img/icon-elingesilvio.webp" alt="Icono de El Inge Silvio">
         </a>
-        <a href="" class="active">Inicio</a>
-        <a href="" class="">Blog</a>
-        <a href="" class="">Videos</a>
-        <a href="" class="">Proyectos</a>
-        <a href="" class="">Acerca de</a>
+        <div class="nav-links">
+            <a href="" class="active">Inicio</a>
+            <a href="" class="">Blog</a>
+            <a href="" class="">Videos</a>
+            <a href="" class="">Proyectos</a>
+            <a href="" class="">Acerca de</a>
+        </div>
         <button type="button" class="button-navbar">
             <i class="fa-solid fa-bars"></i>
         </button>
