--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="#">
+        <a href="#" class="title-page">
             El Inge Silvio
             <img src="assets/img/icon-elingesilvio.webp" alt="Icono de El Inge Silvio">
         </a>
